# oaknut-file

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
scripts/: README.md.j2  generate_readme.py
src/oaknut_file/: __init__.py  access.py  filename_encoding.py  formats.py  inf.py  meta.py  xattr.py
src/oaknut_file.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_access.py  test_filename_encoding.py  test_formats.py  test_inf.py  test_meta.py  test_xattr.py
